Add more examples and create example compilation

--- a/test6.html
+++ b/test6.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>D3 Test</title>
-        <script type="text/javascript" src="d3.js"></script>
-    </head>
-    <body>
-			<div class="test"></div>
-			<div class="other"></div>
-        <script>
-					d3.select("body").append("p").text("a");
-					d3.selectAll("div").append("p").text("c");
-					d3.selectAll("div.test").append("p").text("b");
-        </script>
-    </body>
-</html>
+<meta charset="utf-8">
+<script type="text/javascript" src="d3.js"></script>
+<script>
+	d3.csv("ca-500.csv", function(error, data) {
+
+	});
+</script>
