--- a/WaitTimeGraph.html
+++ b/WaitTimeGraph.html
@@ -62,15 +62,21 @@
 				.range([height, 0]).nice();
 		var y2 = d3.scale.linear()
 				.range([height, 0]).nice();
+		var y3 = d3.scale.linear()
+				.range([height, 0]).nice();
 		var xCat = "Date",
 				yCat = "Wait Time (hrs)";
 		var timeFormat = d3.time.format("%x %X");
+		var timeFormat2 = d3.time.format("%x");
 		var valueline = d3.svg.line()
     .x(function(d) { return x(d.date); })
     .y(function(d) { return y1(d.temp); });
 		var valueline2 = d3.svg.line()
 		.x(function(d) { return x(d.date); })
 		.y(function(d) { return y2(d.precip); });
+		var valueline3 = d3.svg.line()
+		.x(function(d) { return x(d.date); })
+		.y(function(d) { return y3(d.phase); });
 
 		//Set data flags
 		var pchMU = false;
@@ -83,6 +89,7 @@
 		var qehA = false;
 		var showTemp = false;
 		var showPrecip = false;
+		var showMoon = false;
 
 
 	//Read data
@@ -615,6 +622,48 @@
 							.style("opacity", 1.0);
 					});
 
+				svg.append("rect")
+					.attr("class", "button3")
+					.attr("width", 105)
+					.attr("height", 30)
+					.attr("x", width + 50)
+					.attr("y", 610)
+					.attr("rx", 10)
+					.attr("ry", 10)
+					.attr("fill", "#BB33BB")
+					.on('click', function() {
+						showMoon = !showMoon;
+						d3.selectAll("svg").remove();
+						updateDraw();
+					})
+					.on("mouseover", function(){
+						d3.select(".button3")
+							.style("opacity", 0.5);
+					})
+					.on("mouseout", function(){
+						d3.select(".button3")
+							.style("opacity", 1.0);
+					});
+
+				svg.append("text")
+					.attr("class", "button3")
+					.attr("x", width + 60)
+					.attr("y", 630)
+					.text("Moon Phases")
+					.on('click', function() {
+						showMoon = !showMoon;
+						d3.selectAll("svg").remove();
+						updateDraw();
+					})
+					.on("mouseover", function(){
+						d3.select(".button3")
+							.style("opacity", 0.5);
+					})
+					.on("mouseout", function(){
+						d3.select(".button3")
+							.style("opacity", 1.0);
+					});
+
 				svg.append("g")
 						.classed("x axis", true)
 						.attr("transform", "translate(0," + height + ")")
@@ -754,7 +803,6 @@
 
 					d3.csv("PEIWeatherData.csv", function(error, data2){
 						if(error) throw error;
-						var timeFormat2 = d3.time.format("%x");
 						data2.forEach(function(d){
 							d.date = timeFormat2.parse(d.date);
 							d.temp = +d.temp;
@@ -780,6 +828,24 @@
 						}
 					});
 
+					d3.csv("MoonPhases.csv", function(error, data3){
+						if(error) throw error;
+						var timeFormat2 = d3.time.format("%x");
+						data3.forEach(function(d){
+							d.date = timeFormat2.parse(d.date);
+							d.phase = +d.phase;
+							if(d.phase == 4) d.phase = 2;
+						});
+						y3.domain([1, 3]);
+						if(showMoon){
+							svg.append("path")
+								.attr("class", "weatherLine")
+								.classed("weatherLine", true)
+								.attr("d", valueline3(data3))
+								.style("stroke", "#BB33BB")
+								.attr("fill", "none");
+						}
+					});
 			}
 
 			updateDraw();
